2009-03-04  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/io90scr100.h: Yet another update.

2009-03-04  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/io90scr100.h: Updated header file based on new XML
	device file.

2009-03-04  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Lou Amadio:
	bug #25723: Realloc corrupts free list when growing into
	the next free item
	* libc/stdlib/realloc.c: Fix calculation of freelist.
	* tests/simulate/regression/bug-25723.c: Testscript to demonstrate
	the bug as well as its fix.

2009-03-03  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* tests/simulate/other/realloc-01.c: Basic realloc() test script.
	Currently exhibits a failure when simulating on the AT90S8515, which
	is actually due to a real bug (most likely #25723).

2009-03-03  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* tests/simulate/runtest.sh: Add -g to CFLAGS, to help debugging
	any ELF files that experience issues in the simulation.

2009-03-03  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* tests/simulate/other/malloc-01.c: Basic malloc() test script.
	Currently exhibits a failure when simulating on the AT90S8515, which
	is actually due to a real bug (possibly same as bug #22567, and
	maybe #25723).

2009-03-02  Eric B. Weddington  <eric.weddington@atmel.com>

	* crt1/gcrt1.S (__init): Clear RAMPD, RAMPX, RAMPY, RAMPZ registers
	conditional on __AVR_HAVE_RAMPD__.
	* include/avr/common.h (AVR_RAMPD_REG, AVR_RAMPD_ADDR, AVR_RAMPX_REG,
	AVR_RAMPX_ADDR, AVR_RAMPY_REG, AVR_RAMPY_ADDR): Add definitions.

2009-03-02  Eric B. Weddington  <eric.weddington@atmel.com>

	* crt1/gcrt1.S (__do_copy_data): Make clearing of RAMPZ at end
	conditional on __AVR_HAVE_RAMPD__ (currently avrxmega3, avrxmega5,
	and avrxmega7 architectures). These architectures can access > 64K RAM,
	hence RAMPZ is required to be cleared.

2009-03-01  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #25120.