@@ -5,6 +5,7 @@
   [Atmel: #7159] the memory location of tccr0b is mixed with tccr0a for tiny48/88
   [no-id] Fix CLKPCE bit value to be 7.
   [no-id] inlining failed in call to '_delay_ms': function body not available
+  [no-id] malloc() could allocate memory beyond the limits of heap
   [sourceforge.net: #1836849] Multiplication does not work for AT90USB162
   [sourceforge.net: #1883630] ATmegaXX4 - USART0 and USART1 additional bits aliases
   [sourceforge.net: #1910885] Typo in io90pwm3b.h
